[metadata]
name = tempest-plugin
version = 0.0.1
summary = Base tempest plugin structure in a stand-alone repo to use as a model
description-file =
    README.rst
author = Daniel Mellado
author-email = dmellado@redhat.com
home-page = https://www.redhat.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    tempest-plugin

[entry_points]
tempest.test_plugins =
    plugin_name = tempest_plugin.plugin:SampleTempestPlugin

[pbr]
warnerrors = true

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
